--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <link rel="stylesheet" href="/styles/main.css">
         <link rel="stylesheet" href="/styles/home.css">
+        <link rel="stylesheet" href="/styles/modal.css">
 
         <link rel="stylesheet" href="/styles/responsive.css">
         
@@ -20,7 +21,7 @@
                 <header>
                     <img src="/assets/logo.svg" alt="Logo">
     
-                    <a href="http://google.com">
+                    <a href="/create-point.html">
                         <span></span>
                         Cadastre um ponto de coleta
                     </a>
@@ -39,6 +40,31 @@
             </div> 
 
         </div>
+
+
+        <div id="modal" class="hide">
+            <div class="content">
+                <div class="header">
+                    <h1>Pontos de Coleta</h1>
+                    <a href="#">Fechar</a>
+                </div>
+                <form action="/search-results.html">
+                    <label for="search">Cidade</label>
+                    <div class="search field">
+                        <input 
+                            type="text" 
+                            name="search"
+                            placeholder="Pesquise por cidade"
+                        >
+                        <button>
+                            <img src="/assets/search.svg" alt="Buscar">
+                        </button>
+                    </div>
+                </form>
+            </div>
+        </div>
+
+        <script src="/scripts/index.js"></script>
 
     </body>
 </html>
